# silverlock

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CNAME  COPYING.md  README.md  common.pri  config.h  config.in.h  doxyfile  index.html  readme.txt  silverlock.pro  silverlock.qbs  version.h  version.pri
src/: CMakeLists.txt  common.pri  petroules-utilities-qt  silverlock.pro
src/android/: .classpath  .cproject  .project  AndroidManifest.xml  build.xml
src/android/jni/: Android.mk  botan_all.cpp  botan_all.h  native.cpp
src/android/res/layout/: main.xml
src/android/res/values/: libs.xml  strings.xml
src/app/: CMakeLists.txt  Info.plist  app.qbs  applicationmenu.cpp  applicationmenu.h  databaseprinter.cpp  databaseprinter.h  databaseprinterfields.h  inactivityeventfilter.cpp  inactivityeventfilter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_menuhandlers.cpp  qversion.cpp  qversion.h  silverlock.desktop  silverlock.rc  silverlock.rc.txt  silverlockapplication.cpp  silverlockapplication.h  silverlockpreferences.cpp  silverlockpreferences.h  version.h  version.in.h
src/app/cmake/: install.cmake  package.cmake
src/app/dialogs/: aboutdialog.cpp  aboutdialog.ui  configurecolumnsdialog.ui  databaseauthenticationdialog.cpp  databaseprintpreviewdialog.cpp  databaseprintpreviewdialog.ui  entryeditdialog.ui  groupeditdialog.ui  guardeddialog.cpp  guardeddialog.h  nativedialogs.h  nativefiledialog.h  nativeopendirectorydialog.h  nativeopenfiledialog.h  nativeprintdialog.cpp  nativeprintdialog.h  nativesavefiledialog.h  nativesystemdialog.cpp  nativesystemdialog.h  newdatabasewizard.cpp  newdatabasewizard.ui  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  searchdatabasedialog.ui  selectgroupdialog.ui  updatedialog.cpp  updatedialog.h  updatedialog.ui  welcomedialog.ui
src/app/tr/: silverlock_de.ts  silverlock_fr.ts
src/app/widgets/: entrytablewidget.cpp  entrytablewidget.h  groupbrowserwidget.cpp  groupbrowserwidget.h  groupbrowserwidget.ui  toolbarsearchwidget.h  toolbarsearchwidget.ui
src/blackberry/: .project  BlackBerry_App_Descriptor.xml
src/desktop/: Info.plist  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  databaseprintdialog.cpp  databaseprinterfields.cpp  desktop.pro  entryeditdialog.cpp  groupbrowserwidget.cpp  groupeditdialog.cpp  guardeddialog.h  licensedialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_menuhandlers.cpp  mobile.desktop  mobile_harmattan.desktop  newdatabasewizard.cpp  newdatabasewizard.h  newdatabasewizard.ui  preferencesdialog.ui  resources.qrc  searchdatabasedialog.cpp  silverlock.manifest  silverlockapplication.cpp  silverlockapplication.h  silverlockpreferences.cpp  silverlockpreferences.h  updatedialog.cpp  updatedialog.h  updatedialog.ui  version.h  version.pri
src/desktop-launcher/: desktop-launcher.pro  main.cpp  windowscertificatevalidator.cpp
src/desktop/dialogs/: aboutdialog.cpp  configurecolumnsdialog.cpp  databaseauthenticationdialog.cpp  databaseauthenticationdialog.h  databaseauthenticationdialog.ui  databaseprintpreviewdialog.cpp  databaseprintpreviewdialog.h  entryeditdialog.h  groupeditdialog.ui  guardeddialog.cpp  licensedialog.ui  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  searchdatabasedialog.h  updatedialog.cpp  updatedialog.h  updatedialog.ui  welcomedialog.cpp  welcomedialog.h
src/desktop/mac/: mactoolbarsearchwidget.mm
src/desktop/mobile/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/desktop/res/: welcome.html
src/desktop/tr/: silverlock_fr.ts
src/desktop/widgets/: entrytablewidget.ui  expandingspacerwidget.cpp  expandingspacerwidget.h  groupbrowserwidget.cpp  groupbrowserwidget.ui  toolbarsearchwidget.cpp  toolbarsearchwidget.h  toolbarsearchwidget.ui
src/launcher/: CMakeLists.txt  main.cpp  windowscertificatevalidator.h
src/lib/: CMakeLists.txt
src/lib/csharp/: Silverlock.NET.sln
src/lib/csharp/libclr-common/: DatabaseCrypto.cs  DatabaseReader.cs  Entry.cs  Group.cs  ReadOnlyDictionary.cs
src/lib/csharp/libsilverlight/: SilverlockLibSilverlight.csproj
src/lib/dotnet/: SearchParameters.cs  SilverlockSharp.csproj
src/lib/dotnet/Properties/: AssemblyInfo.cs
src/lib/java/: CMakeLists.txt
src/lib/java/src/: CMakeLists.txt
src/lib/java/test/: CMakeLists.txt
src/lib/objc/: CMakeLists.txt  Database.h  Database.m  Entry.h  Entry.i.h  Entry.m  Group.i.h  Group.m  silverlocklibobjc-Info.plist
src/lib/qt/: CMakeLists.txt  database.cpp  database.h  databasecrypto.cpp  databasecrypto.h  databasenode.cpp  databasenode.h  databasereader.cpp  databasereader.h  databasewriter.cpp  databasewriter.h  entry.cpp  entry.h  group.cpp  group.h  lib-qt.qbs  searchparameters.h  silverlocklib.h  silverlocklib_global.h  version.h  version.in.h
src/lib/qt/botan/: botan_all.h
src/lib/qt/cmake/: Botan.cmake  BotanUniversal.cmake  botan.cmake
src/lib/qt/tr/: silverlocklib_fr.ts
src/libclr/: SilverlockLib.NET.csproj
src/libclr-common/: Database.cs  DatabaseCrypto.cs  DatabaseCryptoTest.cs  DatabaseKeys.cs  DatabaseNode.cs  DatabaseWriter.cs  EncryptedData.cs
src/libclr/Properties/: AssemblyInfo.cs
src/libjava/: .classpath  .project  lib
src/libobjc/silverlocklibios.xcodeproj/: project.pbxproj
src/libobjc/silverlocklibobjc.xcodeproj/: project.pbxproj
src/libobjc/src/: Database.i.h  DatabaseNode.h  DatabaseNode.i.h  DatabaseNode.m  Group.h  Untitled.m  silverlocklibios-Prefix.pch  silverlocklibobjc-Prefix.pch
src/libqt/: database.h  database_keys.h  databasecrypto.cpp  databasecrypto.h  databasenode.h  databasereader.cpp  entry.cpp  group.cpp  group.h  jni.cpp  libqt.pro  silverlocklib_global.h  stable.h  version.h
src/libqt/botan/: botan_all.h
src/libqt/tr/: silverlocklib_de.ts  silverlocklib_fr.ts
src/libqttest/: libqttest.pro  tst_libqttesttest.cpp
src/libsilverlight/Properties/: AssemblyInfo.cs
src/qtc_packaging/debian_fremantle/: README  changelog  control  copyright  rules
src/qtc_packaging/debian_harmattan/: README  changelog  control  copyright
(+193 files in other folders)
